--- a/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
@@ -26,7 +26,7 @@
                     <td class="hide">@item.MasterCarton</td>
                     <td class="hide">@item.InnerBox</td>
                     <td class="hide">@item.PackSize</td>
-                    <td class="">@item.UnitName</td>
+                    <td>@item.UnitName</td>
                     <td class="hide">@item.UnitId</td>
                     <td>@item.Status</td>
                     <td>
