--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -341,7 +341,7 @@
 
         //load
         function LoadDataTable() {
-            //debugger;
+            debugger;
 
             var data = { flag: "View", name: $.trim(searchByAny.val()), RawMaterialSupplierId: TryParseInt(ddlSupplierName.val(), 0)};
 
